# messenger

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: auth.py  database.py  endpoints.py  main.py  models.py  queries.py  schemas.py  settings.py  utils.py  ws_endpoints.py  ws_queries.py
docker/db/: init.sql
migrations/: env.py
migrations/versions/: 53273722101a_add_client_id_to_messages.py  78692150f549_модель_для_прочтения_сообщений.py  8d23a6ca1ab9_обновленная_модель.py  a38bb0a0a54f_change_declarativebase.py  f0e623c260ec_remove_messageread_model.py
static/: index.html
tests/: conftest.py  test_auth.py  test_endpoints.py  test_ws_queries.py
